added content rmse

--- a/major_project_report/sec/conclusion.tex
+++ b/major_project_report/sec/conclusion.tex
@@ -1,2 +1,3 @@
 \newpage
 \section{CONCLUSION}
+In this project, we have developed classification models that take Facebook user's status as input and classifies their personality based on big five personality traits. This information is used by user to user collaborative filtering to find out similar users and recommend music to them. This recommendation model performs better then the user to user collaborative filtering than user to user collaborative filtering with rating matrix but not as good as the matrix factorization.
