--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -22,20 +22,20 @@
 \newpage
 {
   \setlength{\parskip}{0em}
-  \renewcommand\contentsname{Table of Contents} % This will change heading text
-  \tableofcontents \addcontentsline{toc}{section}{Table of Contents}
+  \renewcommand\contentsname{TABLE OF CONTENT} % This will change heading text
+  \tableofcontents \addcontentsline{toc}{section}{TABLE OF CONTENT}
 }
 
 
 % List of figures
 
 \newpage
-\listoffigures \addcontentsline{toc}{section}{List of Figures}
+\listoffigures \addcontentsline{toc}{section}{LIST OF FIGURES}
 
 % List of tables
 
 \newpage
-\listoftables \addcontentsline{toc}{section}{List of Tables}
+\listoftables \addcontentsline{toc}{section}{LIST OF TABLE}
 
 
 %\input{sec/logistic-regression}
