--- a/major_project_report/sec/acknowledgment.tex
+++ b/major_project_report/sec/acknowledgment.tex
@@ -2,7 +2,7 @@
 
 \newpage
 \section*{ACKNOWLEDGMENT}
-\addcontentsline{toc}{section}{Acknowledgments}
+\addcontentsline{toc}{section}{ACKNOWLEDGMENT}
 We would like to express our sincere gratitude to the ​{\bf Department of Electronics and Computer Engineering} at Institute of Engineering, Pulchowk Campus for providing us opportunity to implement the knowledge gained over these years as major project for fourth year.
 
 We would also like to express our deepest sense of gratitude and thanks to our supervisor {\bf Mr. Daya Sagar Baral} for providing invaluable insight and guidelines for this project.
