--- a/major_project_report/sec/titlepage.tex
+++ b/major_project_report/sec/titlepage.tex
@@ -1,7 +1,7 @@
 
 % Title page (Design in your own way)
 
-\addcontentsline{toc}{section}{Title Page}
+\addcontentsline{toc}{section}{TITLE PAGE}
 \thispagestyle{empty} % This will hide pagenumber in title page
 
 
