--- a/major_project_report/main.tex
+++ b/major_project_report/main.tex
@@ -44,7 +44,7 @@
 \input{sec/theoretical_background}
 \input{sec/methodology}
 \input{sec/system_design}
-\input{sec/system_implementation}
+% \input{sec/system_implementation}
 \input{sec/tools_technologies}
 \input{sec/result}
 \input{sec/limitations}
