--- a/major_project_report/sec/introduction.tex
+++ b/major_project_report/sec/introduction.tex
@@ -25,7 +25,7 @@ Some sample items used by person with this traits are:
 	\item I am exact in my work.
 	\item I am always prepared.
 \end{itemize}
-\item Extraversion: Extraversion is characterized by breadth of activities, surgency from external activity/situations and energy creation from external means. Extraverts enjoy interacting with people and are often perceived as full of energy. They tend to be enthusiastic, action-oriented indivduals. They posses high group visibility, like to talk and assert themselves.
+\item Extraversion: Extraversion is characterized by breadth of activities, surgency from external activity/situations and energy creation from external means. Extraverts enjoy interacting with people and are often perceived as full of energy. They tend to be enthusiastic, action-oriented individuals. They posses high group visibility, like to talk and assert themselves.
 Some sample items used by person with this traits are:
 \begin{itemize}
 	\item I love the life of the party.
