--- a/major_project_report/sec/limitations.tex
+++ b/major_project_report/sec/limitations.tex
@@ -1,5 +1,5 @@
 \newpage
-\section{Limitations and Future Enhancements}
+\section{LIMITATIONS AND FUTURE ENHANCEMENTS}
 In the context of building classification model, the preprocessing of the status updates was a huge challenge. The status updates of users can contain various emojis which can are significant but ignored. The classification model is based on uni-gram.
 
 The current recommendation system as a whole suffers from cold start in case of item i.e. item ramp up problem. In case of user to user collaborative filtering with rating matrix, it suffers from stability vs plasticity issue. Besides, in case of collaborative engine, gray sheep problem still prevails with the use of the personality too.
