--- a/major_project_report/sec/appendix.tex
+++ b/major_project_report/sec/appendix.tex
@@ -32,22 +32,45 @@
 
 \newpage
 \section*{Appendix B}
-Stopwords used\\
+{\bf Stopwords used}\\
+
+
 {\em 'i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', 'her', 'hers', 'herself', 'it', 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'off', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'no', 'nor', 'not', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'don', 'should', 'now', 'd', 'll', 'm', 'o', 're', 've', 'y', 'ain', 'aren', 'couldn', 'didn', 'doesn', 'hadn', 'hasn', 'haven', 'isn', 'ma', 'mightn', 'mustn', 'needn', 'shan', 'shouldn', 'wasn', 'weren', 'won', 'wouldn'}\\
 
-POS tags used\\
-JJ: adjective or numeral, ordinal
 
-third ill-mannered pre-war regrettable oiled calamitous first separable
+{\bf POS tags used}\\
+
+
+JJ: adjective or numeral, ordinal\\
+example: third ill-mannered pre-war regrettable oiled calamitous first separable
 ectoplasmic battery-powered participatory fourth still-to-be-named
-multilingual multi-disciplinary ...
-JJR: adjective, comparative
+multilingual multi-disciplinary etc.
 
-bleaker braver breezier briefer brighter brisker broader bumper busier
+
+JJR: adjective, comparative\\
+example: bleaker braver breezier briefer brighter brisker broader bumper busier
 calmer cheaper choosier cleaner clearer closer colder commoner costlier
-cozier creamier crunchier cuter ...
-JJS: adjective, superlative
+cozier creamier crunchier cuter etc.
 
-calmest cheapest choicest classiest cleanest clearest closest commonest
+
+JJS: adjective, superlative\\
+example: calmest cheapest choicest classiest cleanest clearest closest commonest
 corniest costliest crassest creepiest crudest cutest darkest deadliest
-dearest deepest densest dinkiest ...
+dearest deepest densest dinkiest etc.
+
+
+RB: adverb\\
+example: occasionally unabatingly maddeningly adventurously professedly
+stirringly prominently technologically magisterially predominately
+swiftly fiscally pitilessly etc.
+
+
+RBR: adverb, comparative\\
+example: further gloomier grander graver greater grimmer harder harsher
+healthier heavier higher however larger later leaner lengthier less-
+perfectly lesser lonelier longer louder lower more etc.
+
+
+RBS: adverb, superlative\\
+example: best biggest bluntest earliest farthest first furthest hardest
+heartiest highest largest least less most nearest second tightest worst
